// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render BlogsList with blogs 1`] = `
<DocumentFragment>
  <div>
    BlogItemBlogItemBlogItem
  </div>
</DocumentFragment>
`;

exports[`Should render BlogsList with empty array 1`] = `
<DocumentFragment>
  <div>
    <p>
      No blogs
    </p>
  </div>
</DocumentFragment>
`;

exports[`Should render BlogsList with searchFilter 1`] = `
<DocumentFragment>
  <div>
    BlogItemBlogItem
  </div>
</DocumentFragment>
`;
